--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   provider: ^6.1.2
   video_player: ^2.9.2
   chewie: ^1.8.5
+  dio: ^5.7.0
+  encrypt: ^5.0.3
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
